keda/keda-admission-webhooks_Deployment_keda.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: keda-admission-webhooks
    app.kubernetes.io/component: operator
    app.kubernetes.io/instance: keda
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keda-admission-webhooks
    app.kubernetes.io/part-of: keda-operator
    app.kubernetes.io/version: 2.19.0
    helm.sh/chart: keda-2.19.0
    name: keda-admission-webhooks
  name: keda-admission-webhooks
  namespace: keda
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: keda-admission-webhooks
  template:
    metadata:
      labels:
        app: keda-admission-webhooks
        app.kubernetes.io/component: operator
        app.kubernetes.io/instance: keda
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: keda-admission-webhooks
        app.kubernetes.io/part-of: keda-operator
        app.kubernetes.io/version: 2.19.0
        helm.sh/chart: keda-2.19.0
        name: keda-admission-webhooks
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - --zap-log-level=info
        - --zap-encoder=console
        - --zap-time-encoding=rfc3339
        - --cert-dir=/certs
        - --health-probe-bind-address=:8081
        - --metrics-bind-address=:8080
        command:
        - /keda-admission-webhooks
        image: ghcr.io/kedacore/keda-admission-webhooks:2.19.0
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 25
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: keda-admission-webhooks
        ports:
        - containerPort: 9443
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 20
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 1
            memory: 1000Mi
          requests:
            cpu: 100m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /certs
          name: certificates
          readOnly: true
      enableServiceLinks: true
      hostNetwork: false
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        runAsNonRoot: true
      serviceAccountName: keda-webhook
      volumes:
      - name: certificates
        secret:
          defaultMode: 420
          secretName: kedaorg-certs
