keda/keda-operator-metrics-apiserver_Deployment_keda.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: keda-operator-metrics-apiserver
    app.kubernetes.io/component: operator
    app.kubernetes.io/instance: keda
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keda-operator-metrics-apiserver
    app.kubernetes.io/part-of: keda-operator
    app.kubernetes.io/version: 2.19.0
    helm.sh/chart: keda-2.19.0
  name: keda-operator-metrics-apiserver
  namespace: keda
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: keda-operator-metrics-apiserver
  template:
    metadata:
      labels:
        app: keda-operator-metrics-apiserver
        app.kubernetes.io/component: operator
        app.kubernetes.io/instance: keda
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: keda-operator-metrics-apiserver
        app.kubernetes.io/part-of: keda-operator
        app.kubernetes.io/version: 2.19.0
        helm.sh/chart: keda-2.19.0
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - --port=8080
        - --secure-port=6443
        - --logtostderr=true
        - --stderrthreshold=ERROR
        - --disable-compression=true
        - --metrics-service-address=keda-operator.keda.svc.cluster.local:9666
        - --client-ca-file=/certs/ca.crt
        - --tls-cert-file=/certs/tls.crt
        - --tls-private-key-file=/certs/tls.key
        - --cert-dir=/certs
        - --v=0
        - --zap-log-level=info
        - --zap-encoder=console
        - --zap-time-encoding=rfc3339
        command:
        - /keda-adapter
        image: ghcr.io/kedacore/keda-metrics-apiserver:2.19.0
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 6443
            scheme: HTTPS
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: keda-operator-metrics-apiserver
        ports:
        - containerPort: 6443
          name: https
          protocol: TCP
        - containerPort: 8080
          name: metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readyz
            port: 6443
            scheme: HTTPS
          initialDelaySeconds: 5
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 1
            memory: 1000Mi
          requests:
            cpu: 100m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /certs
          name: certificates
          readOnly: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      hostNetwork: false
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        runAsNonRoot: true
      serviceAccountName: keda-metrics-server
      volumes:
      - name: certificates
        secret:
          defaultMode: 420
          secretName: kedaorg-certs
