keda/keda-admission-webhooks_Service_keda.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: operator
    app.kubernetes.io/instance: keda
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keda-admission-webhooks
    app.kubernetes.io/part-of: keda-operator
    app.kubernetes.io/version: 2.19.0
    helm.sh/chart: keda-2.19.0
  name: keda-admission-webhooks
  namespace: keda
spec:
  ports:
  - appProtocol: https
    name: https
    port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app: keda-admission-webhooks
