keda/keda-operator-metrics-apiserver_Service_keda.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keda-operator-metrics-apiserver
    app.kubernetes.io/component: operator
    app.kubernetes.io/instance: keda
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keda-operator-metrics-apiserver
    app.kubernetes.io/part-of: keda-operator
    app.kubernetes.io/version: 2.19.0
    helm.sh/chart: keda-2.19.0
  name: keda-operator-metrics-apiserver
  namespace: keda
spec:
  ports:
  - appProtocol: https
    name: https
    port: 443
    protocol: TCP
    targetPort: 6443
  - name: metrics
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: keda-operator-metrics-apiserver
  type: ClusterIP
