keda/keda-operator_Service_keda.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: operator
    app.kubernetes.io/instance: keda
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keda-operator
    app.kubernetes.io/part-of: keda-operator
    app.kubernetes.io/version: 2.19.0
    helm.sh/chart: keda-2.19.0
  name: keda-operator
  namespace: keda
spec:
  ports:
  - name: metricsservice
    port: 9666
    targetPort: 9666
  - name: metrics
    port: 8080
    targetPort: 8080
  selector:
    app: keda-operator
